-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
None
-
I402da6074a1c7a9b1d026efe5d1b068e4aea8805
QDirectFBPaintEngine::fill() crashes if QVectorPath elements is NULL.
Here is the fix -> http://pastebin.com/ByrKskAF.
For some reason am not able to get the qt code from codereview.qt-project.org. it is getting timed out. So giving in pastebin.
Request you to apply this for 4.8.1(next minor release)